--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "esbuild-loader": "^2.8.0",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0",
+    "lit-element": "^3.0.0-pre.2",
+    "lit-html": "^2.0.0-pre.5",
     "stimulus": "^2.0.0"
   },
   "version": "0.1.0",
